@@ -252,6 +252,16 @@ void F_List(faddr *t, char *replyid, int Notify)
 				fgetpos(fi,&fileptr2);
 			    	SubTot++;
 			    	Total++;
+				/*
+				 * Panic message split
+				 */
+				if (((ftell(qp) - msgptr) / 1024) >= CFG.new_force) {
+				    MacroVars("Z","d",1);
+				    Syslog('-', "  Forced splitting message at %ld bytes", ftell(qp) - msgptr);
+				    CloseMail(qp, t);
+				    qp = SendMgrMail(t, CFG.ct_KeepMgr, FALSE, (char *)"Filemgr", subject, replyid);
+				    msgptr = ftell(qp);
+				}
 			    }
 			} else
 			    fseek(fp, tichdr.syssize, SEEK_CUR);
