@@ -36,6 +36,8 @@ v0.37.01	14-Jan-2003.
 
 	mbfido:
 		Removed all code for charset translation.
+		In areamgr/filemgr lists the messages are forced splitted when
+		the force limit is reached in the middle of a group listing.
 
 	mbsetup:
 		Added protection against wrong database sizes depending on
@@ -46,6 +48,11 @@ v0.37.01	14-Jan-2003.
 	mbsebbs:
 		It will now refuse to up/download OLR packets when the system
 		bbs id is not set in the global setup.
+		When a reply is made on a message in a area which allows
+		aliases, the user is asked to use his alias.
+		When a reply is made on a message in a newsgroup and your
+		systems has a permanent mail domain the email address is used
+		as from name.
 
 
 v0.37.00	26-Dec-2002 - 14-Jan-2003
